[gd_scene load_steps=12 format=3 uid="uid://dnsgukwu73kqe"]

[ext_resource type="PackedScene" uid="uid://duf4bf7b442q5" path="res://characters/player/player.tscn" id="1_qvbmh"]
[ext_resource type="Script" uid="uid://ddn8nqdq0px4l" path="res://scenes/battle/battle.gd" id="1_y5c41"]
[ext_resource type="PackedScene" uid="uid://7m0g6qqiyhyx" path="res://characters/slime/slime.tscn" id="2_kv0x3"]
[ext_resource type="Texture2D" uid="uid://danc2worq1cc6" path="res://assets/sprites/tilesets/plains.png" id="4_0yh6x"]
[ext_resource type="Texture2D" uid="uid://jypw60nwk4s1" path="res://assets/sprites/tilesets/grass.png" id="5_h0kxc"]
[ext_resource type="Texture2D" uid="uid://toknbuaae5dd" path="res://assets/sprites/tilesets/decor_16x16.png" id="6_fh7rg"]
[ext_resource type="AudioStream" uid="uid://euw4we4wm15t" path="res://assets/music/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3" id="7_pll4o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h0kxc"]
texture = ExtResource("4_0yh6x")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fh7rg"]
texture = ExtResource("5_h0kxc")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pll4o"]
texture = ExtResource("6_fh7rg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0

[sub_resource type="TileSet" id="TileSet_fh7rg"]
sources/0 = SubResource("TileSetAtlasSource_h0kxc")
sources/1 = SubResource("TileSetAtlasSource_fh7rg")
sources/2 = SubResource("TileSetAtlasSource_pll4o")

[node name="Battle" type="Node2D"]
script = ExtResource("1_y5c41")

[node name="Player" parent="." instance=ExtResource("1_qvbmh")]
position = Vector2(1030, 265)
input_pickable = false

[node name="EnemiesContainer" type="Node2D" parent="."]

[node name="Slime" parent="EnemiesContainer" instance=ExtResource("2_kv0x3")]
position = Vector2(183, 358)
input_pickable = false

[node name="Slime2" parent="EnemiesContainer" instance=ExtResource("2_kv0x3")]
position = Vector2(183, 247)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 647.0
mouse_filter = 2

[node name="BattleLogPanel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 84.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HUD/BattleLogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
text = "O que deseja fazer?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattlePanel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelsContainer" type="HBoxContainer" parent="HUD/BattlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyPanel" type="Panel" parent="HUD/BattlePanel/PanelsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/BattlePanel/PanelsContainer/EnemyPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HUD/BattlePanel/PanelsContainer/EnemyPanel/VBoxContainer"]
layout_mode = 2
text = "Slime (a)
"

[node name="PlayerPanel" type="Panel" parent="HUD/BattlePanel/PanelsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/BattlePanel/PanelsContainer/PlayerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerLifeLabel" type="Label" parent="HUD/BattlePanel/PanelsContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
text = "Player 10/10"
horizontal_alignment = 3
text_overrun_behavior = 1

[node name="ActionsPanel" type="Panel" parent="HUD/BattlePanel/PanelsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/BattlePanel/PanelsContainer/ActionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="Button" parent="HUD/BattlePanel/PanelsContainer/ActionsPanel/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Atacar"
flat = true
alignment = 0
expand_icon = true

[node name="ItemButton" type="Button" parent="HUD/BattlePanel/PanelsContainer/ActionsPanel/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Item"
flat = true
alignment = 0

[node name="ItensPanel" type="Panel" parent="HUD/BattlePanel/PanelsContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/BattlePanel/PanelsContainer/ItensPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItensContainer" type="VBoxContainer" parent="HUD/BattlePanel/PanelsContainer/ItensPanel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButtonContainer" type="VBoxContainer" parent="HUD/BattlePanel/PanelsContainer/ItensPanel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="HUD/BattlePanel/PanelsContainer/ItensPanel/VBoxContainer2/BackButtonContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
text = "Voltar"

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_fh7rg")
format = 2
layer_0/name = "ground"
layer_0/z_index = -2
layer_0/tile_data = PackedInt32Array(589827, 131072, 2, 589828, 131072, 2, 589829, 131072, 2, 589830, 196608, 2, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 65536, 2, 589845, 131072, 2, 589846, 196608, 2, 589825, 65536, 2, 524289, 65536, 1, 458753, 65536, 1, 393217, 65536, 1, 327681, 65536, 1, 262145, 65536, 1, 196609, 65536, 1, 131073, 65536, 0, 131074, 131072, 0, 131075, 131072, 0, 131076, 131072, 0, 131077, 131072, 0, 131078, 196608, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 65536, 0, 131093, 131072, 0, 131094, 196608, 0, 196630, 196608, 1, 262166, 196608, 1, 327702, 196608, 1, 393238, 196608, 1, 458774, 196608, 1, 524310, 196608, 1, 589826, 131072, 2, 196610, 131072, 1, 262146, 131072, 1, 327682, 131072, 1, 393218, 131072, 1, 458754, 131072, 1, 524290, 131072, 1, 196611, 131072, 1, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 458755, 131072, 1, 524291, 131072, 1, 196612, 131072, 1, 262148, 131072, 1, 327684, 131072, 1, 393220, 131072, 1, 458756, 131072, 1, 524292, 131072, 1, 196613, 131072, 1, 262149, 131072, 1, 327685, 131072, 1, 393221, 131072, 1, 458757, 131072, 1, 524293, 131072, 1, 196614, 196608, 1, 262150, 196608, 1, 327686, 196608, 1, 393222, 196608, 1, 458758, 196608, 1, 524294, 196608, 1, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 393229, 1, 0, 458765, 1, 0, 524301, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 1, 0, 196623, 1, 0, 262159, 1, 0, 327695, 1, 0, 393231, 1, 0, 458767, 1, 0, 524303, 1, 0, 196624, 1, 0, 262160, 1, 0, 327696, 1, 0, 393232, 1, 0, 458768, 1, 0, 524304, 1, 0, 196625, 1, 0, 262161, 1, 0, 327697, 1, 0, 393233, 1, 0, 458769, 1, 0, 524305, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 1, 0, 524306, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 1, 0, 524307, 1, 0, 196628, 65536, 1, 262164, 65536, 1, 327700, 65536, 1, 393236, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 196629, 131072, 1, 262165, 131072, 1, 327701, 131072, 1, 393237, 131072, 1, 458773, 131072, 1, 524309, 131072, 1, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 23, 1, 0, 22, 1, 0, 21, 1, 0, 20, 1, 0, 19, 1, 0, 18, 1, 0, 17, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, 13, 1, 0, 12, 1, 0, 11, 1, 0, 10, 1, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 1, 1, 0, 0, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 851968, 1, 0, 655362, 1, 0, 720898, 1, 0, 786434, 1, 0, 851970, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 655364, 1, 0, 720900, 1, 0, 786436, 1, 0, 851972, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 851973, 1, 0, 655366, 1, 0, 720902, 1, 0, 786438, 1, 0, 851974, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 655368, 1, 0, 720904, 1, 0, 786440, 1, 0, 851976, 1, 0, 655369, 1, 0, 720905, 1, 0, 786441, 1, 0, 851977, 1, 0, 655370, 1, 0, 720906, 1, 0, 786442, 1, 0, 851978, 1, 0, 655371, 1, 0, 720907, 1, 0, 786443, 1, 0, 851979, 1, 0, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 851980, 1, 0, 655373, 1, 0, 720909, 1, 0, 786445, 1, 0, 851981, 1, 0, 655374, 1, 0, 720910, 1, 0, 786446, 1, 0, 851982, 1, 0, 655375, 1, 0, 720911, 1, 0, 786447, 1, 0, 851983, 1, 0, 655376, 1, 0, 720912, 1, 0, 786448, 1, 0, 851984, 1, 0, 655377, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 655378, 1, 0, 720914, 1, 0, 786450, 1, 0, 851986, 1, 0, 655379, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 655380, 1, 0, 720916, 1, 0, 786452, 1, 0, 851988, 1, 0, 655381, 1, 0, 720917, 1, 0, 786453, 1, 0, 851989, 1, 0, 655382, 1, 0, 720918, 1, 0, 786454, 1, 0, 851990, 1, 0, 655383, 1, 0, 720919, 1, 0, 786455, 1, 0, 851991, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 1, 0, 327703, 1, 0, 393239, 1, 0, 458775, 1, 0, 524311, 1, 0, 589847, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 1, 0, 327704, 1, 0, 393240, 1, 0, 458776, 1, 0, 524312, 1, 0, 589848, 1, 0, 655384, 1, 0, 720920, 1, 0, 786456, 1, 0, 851992, 1, 0, 24, 1, 0, 65560, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 1, 0, 655358, 1, 0, 720894, 1, 0, 786430, 1, 0, 851966, 1, 0, 917502, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 1, 0, 786431, 1, 0, 851967, 1, 0, 917503, 1, 0)
layer_1/name = "ground_decor"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(524296, 65538, 0, 262154, 196610, 0, 393231, 2, 0, 589840, 131074, 0, 524300, 131074, 0, 196625, 65538, 0, 131085, 65538, 0, 524309, 2, 4, 196629, 131074, 4, 196610, 2, 4, 524293, 196610, 4, 196613, 65538, 4, 524290, 65538, 4)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_pll4o")
autoplay = true
bus = &"Music"

[connection signal="selected" from="Player" to="." method="_on_player_selected"]
[connection signal="selected" from="EnemiesContainer/Slime" to="." method="_on_enemy_selected"]
[connection signal="selected" from="EnemiesContainer/Slime2" to="." method="_on_enemy_selected"]
[connection signal="button_down" from="HUD/BattlePanel/PanelsContainer/ActionsPanel/VBoxContainer/AttackButton" to="." method="_on_attack_button_down"]
[connection signal="button_down" from="HUD/BattlePanel/PanelsContainer/ActionsPanel/VBoxContainer/ItemButton" to="." method="_on_item_button_down"]
[connection signal="button_down" from="HUD/BattlePanel/PanelsContainer/ItensPanel/VBoxContainer2/BackButtonContainer/BackButton" to="." method="_on_item_back_button_down"]
